nginxweb/eks-nginx-expose/pod1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oxer
  namespace: default
  labels:
    app: oxer
spec:
  selector:
    matchLabels:
      app: oxer
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: oxer
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  oxer
        image: nginx:latest
        resources:
          requests:
            cpu: 100m
            memory: 70Mi
          limits:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 80
